// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KCard has hover class when passed 1`] = `
<div class="kong-card border hover">
  <!---->
  <div class="k-card-content d-flex">
    <div class="k-card-body"></div>
    <!---->
  </div>
</div>
`;

exports[`KCard has shadow class when passed 1`] = `
<div class="kong-card border kcard-shadow">
  <!---->
  <div class="k-card-content d-flex">
    <div class="k-card-body"></div>
    <!---->
  </div>
</div>
`;

exports[`KCard matches snapshot 1`] = `
<div class="kong-card border">
  <!---->
  <div class="k-card-content d-flex">
    <div class="k-card-body"></div>
    <!---->
  </div>
</div>
`;

exports[`KCard renders slots when passed 1`] = `
<div class="kong-card border">
  <div class="k-card-header d-flex mb-4">
    <div>
      <div class="k-card-status-hat mb-4"><span>Card Status Hat</span></div>
      <div class="k-card-title">
        <h4><span>Card Title</span></h4>
      </div>
    </div>
    <div class="k-card-actions"><span>Card Actions</span></div>
  </div>
  <div class="k-card-content d-flex">
    <div class="k-card-body">
      <div>Card Body</div>
    </div>
    <div class="k-card-notifications"><span>Card Notifications</span></div>
  </div>
</div>
`;
